# TenderMind-AI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: db.py  main.py
apps/api/app/agents/: eligibility.py
apps/api/app/api/routes/: health.py  tenders.py
apps/api/app/core/: config.py  logging.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: tenders.py
apps/api/app/scrapers/: base.py  demo_portals.py
apps/api/app/services/: scoring.py  tenders.py
apps/api/app/tests/: test_scoring.py
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/tenders/: page.tsx
apps/web/components/: shell.tsx
apps/web/lib/: api.ts
docs/: folder-structure.md  interview-kit.md  system-design-notes.md
docs/api/: api-design.md
docs/architecture/: agent-workflow.md  system-architecture.md
docs/database/: schema.md
docs/product/: prd.md
infra/: deployment-checklist.md
