[project]
name = "tendermind-api"
version = "0.1.0"
description = "TenderMind-AI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.4.0",
  "loguru>=0.7.2",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]
[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.23.0"]
[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
